css/style: fix h3 margins (again).
Emoji in headings look weird otherwise.

--- a/css/style.scss
+++ b/css/style.scss
@@ -255,7 +255,7 @@ img {
 
 h3, #toctitle {
   font-size: 1.4em;
-  margin: 1.5em 0 -0.5em 0;
+  margin: 1.5em 0 0 0;
 
   @media only screen and (max-device-width: 480px) {
     font-size: 1.2em;
